# i3-snapshot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: prepare-release.yml  publish-testing.yml  publish-unstable.yml  test-pr.yml
debian/: changelog  control  copyright  rules
src/: main.cpp
